--- a/Practice-3/index.html
+++ b/Practice-3/index.html
@@ -18,10 +18,10 @@
         </thead>
         <tbody>
             <tr>
-                <td class="btn-1">Sopha Turner</td>
+                <td>Sopha Turner</td>
                 <td>14</td>
                 <td>8th Grade</td>
-                <td class="btn-3">Mathematics</td>
+                <td>Mathematics</td>
             </tr>
             <tr>
                 <td>Liam Jonhson</td>
@@ -36,10 +36,10 @@
                 <td>Science</td>
             </tr>
             <tr>
-                <td class="btn-2">Noah Smith</td>
+                <td>Noah Smith</td>
                 <td>16</td>
                 <td>10th Grade</td>
-                <td class="btn-4">English</td>
+                <td>English</td>
             </tr>
         </tbody>
     </table>
